2017-04-09  Richard Frith-Macdonald <rfm@gnu.org>

   	* Headers/Foundation/NSTask.h:
   	* Source/NSTask.m:
	Apply OSX compatibility fix for NSTask notifications (bug #49021)
	by Larry Campbell.

2017-04-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: Fix leak spotted by David Lobron.

2017-04-01 Riccardo Mottola <rm@gnu.org>

	* Source/NSConnection.m
	Correct format specifier to char*

2017-03-17 Riccardo Mottola <rm@gnu.org>

	* Source/NSFileManager.m:(nextObject of Enumerator)
	Skip file if no valid filename could be retrieved most probably due
	to Charset mismatches, this is is more a last resort: probably a
	lossy conversion should be attempted before.

2017-03-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZones/NSTimeZones.tar: Updated with latest information.

2017-03-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Implement NSNonLossyASCIIStringEncoding
	in a manner compatible with OSX.  Added regression tests.

2017-02-11  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSICUString.m (UTextNSStringAccess,
	UTextInitWithNSMutableString, UTextInitWithNSString):
	Fix a serious misunderstanding of the icu string access API: The
	value of nativeIndexingLimit must not exceed the length of the
	current chunk. Otherwise icu library macros could miss to properly
	reinitialize chunks, which, for instance, could lead to returning
	regular expression matches outside the selected range.

2017-01-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Use getaddrinfo rather than gethostbyname if 
	available (bug #50032).

2016-12-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Fix missing line preventing documentation of
	enumeration constants.

2016-11-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/Additions/NSCalendarDate+GNUstepBase.m (weekOfYear): Fix
	an off by 1 calculation which meant that weekOfYear would return 2